<resources>
    <string name="app_name">AMAServiceDev</string>
    <string name="service_uuid">Service UUID</string>
    <string name="uuid_sample">xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_pairing">Pairing...</string>
    <string name="ama_uuid">931C7E8A-540F-4686-B798-E8DF0A2AD9F7</string>
    <string name="paired_device">Paired Device</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_discovering">Discovering...</string>
    <string name="btn_connecting">Connecting...</string>
    <string name="protocol">Protocol</string>
    <string name="btn_send">Send</string>
    <string-array name="proto_msg">
        <item>Start Setup</item>
        <item>Complete Setup</item>
        <item>Get Device Information</item>
        <item>Get Device Configuration</item>
    </string-array>
    <string-array name="svc_uuid">
        <item>931C7E8A-540F-4686-B798-E8DF0A2AD9F7</item>
        <item>00001101-0000-1000-8000-00805F9B34FB</item>
    </string-array>
</resources>