<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewSvcUuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/service_uuid"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSvcUuid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:text="@string/btn_connect"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPairedDev" />

    <EditText
        android:id="@+id/editTextMultiLineInfo"
        android:layout_width="378dp"
        android:layout_height="356dp"
        android:layout_marginStart="12dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:isScrollContainer="true"
        android:singleLine="false"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSend"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewPairedDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paired_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSvcUuid" />

    <Spinner
        android:id="@+id/spinnerPairedDev"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerProtocol"
        app:layout_constraintTop_toBottomOf="@+id/textViewPairedDev"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:text="@string/btn_scan"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonConnect"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPairedDev" />

    <TextView
        android:id="@+id/textViewProtocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/protocol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnect" />

    <Spinner
        android:id="@+id/spinnerProtocol"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextMultiLineInfo"
        app:layout_constraintTop_toBottomOf="@+id/textViewProtocol"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProtocol" />

    <Spinner
        android:id="@+id/spinnerSvcUuid"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPairedDev"
        app:layout_constraintEnd_toEndOf="@+id/spinnerPairedDev"
        app:layout_constraintTop_toBottomOf="@+id/textViewSvcUuid"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>